fixed spacing

--- a/public/stylesheets/prod/custom.css
+++ b/public/stylesheets/prod/custom.css
@@ -5,3 +5,7 @@
 .col-sm-9 {
 	padding-top: 100px;
 }
+
+.sidebar {
+	height: 1000px;
+}
